Fixup `/town relations` command syntax