@@ -949,12 +949,12 @@ public final class TownCommand extends Command {
     private static class RelationsCommand extends ChildCommand implements TabProvider {
 
         protected RelationsCommand(@NotNull Command parent, @NotNull HuskTowns plugin) {
-            super("relations", List.of(), parent, "[view (town)|set <ally|neutral|enemy> <other_town>]", plugin);
+            super("relations", List.of(), parent, "[list (town)|set <ally|neutral|enemy> <other_town>]", plugin);
         }
 
         @Override
         public void execute(@NotNull CommandUser executor, @NotNull String[] args) {
-            final String operation = parseStringArg(args, 0).orElse("view").toLowerCase(Locale.ENGLISH);
+            final String operation = parseStringArg(args, 0).orElse("list").toLowerCase(Locale.ENGLISH);
             if (!operation.equals("set")) {
                 plugin.getManager().towns().showTownRelations((OnlineUser) executor, parseStringArg(args, 1)
                         .orElse(null));
@@ -975,11 +975,13 @@ public final class TownCommand extends Command {
         @Override
         public List<String> suggest(@NotNull CommandUser user, @NotNull String[] args) {
             return switch (args.length) {
-                case 0, 1 -> filter(List.of("set", "list"), args);
-                case 2 -> filter(List.of("ally", "neutral", "enemy"), args);
-                case 3 -> plugin.getTowns().stream()
-                        .map(Town::getName)
-                        .collect(Collectors.toList());
+                case 0, 1 -> List.of("set", "list");
+                case 2 -> args[0].equalsIgnoreCase("set")
+                        ? List.of("ally", "neutral", "enemy")
+                        : plugin.getTowns().stream().map(Town::getName).toList();
+                case 3 -> args[0].equalsIgnoreCase("set")
+                        ? plugin.getTowns().stream().map(Town::getName).toList()
+                        : List.of();
                 default -> List.of();
             };
         }
